--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "scripts": {
     "start": "node server.js"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
+    "gulp": "^3.9.1"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/johngarcia9110/javascript-es6/issues"
